[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GDCharts/icon.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Presentation/SummaryReport/chartType.tres" type="ButtonGroup" id=4]
[ext_resource path="res://Presentation/SummaryReport/Chart.gd" type="Script" id=5]
[ext_resource path="res://addons/GDCharts/script.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="main" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 693.0
margin_bottom = 1101.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assignment" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="assignment" type="OptionButton" parent="TabContainer/Assignment"]
margin_left = 224.462
margin_top = 110.19
margin_right = 328.462
margin_bottom = 157.19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssignmentBtn" type="Button" parent="TabContainer/Assignment"]
margin_left = 217.66
margin_top = 201.335
margin_right = 353.66
margin_bottom = 251.335
text = "View Avg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentAssignmentBtn" type="Button" parent="TabContainer/Assignment"]
margin_left = 437.95
margin_top = 209.0
margin_right = 558.95
margin_bottom = 258.0
text = "View Student Assignment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TabContainer/Assignment"]
margin_left = 122.774
margin_top = 298.34
margin_right = 188.774
margin_bottom = 341.34
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentNum" type="Label" parent="TabContainer/Assignment"]
margin_left = 122.774
margin_top = 342.539
margin_right = 188.774
margin_bottom = 385.539
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="Label" parent="TabContainer/Assignment"]
margin_left = 16.8009
margin_top = 277.921
margin_right = 82.8009
margin_bottom = 320.921
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="Label" parent="TabContainer/Assignment"]
margin_left = 21.9702
margin_top = 364.509
margin_right = 87.9702
margin_bottom = 407.509
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avg" type="Label" parent="TabContainer/Assignment"]
margin_left = 29.7245
margin_top = 425.25
margin_right = 95.7245
margin_bottom = 468.25
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Campaign" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="menu" type="Control" parent="TabContainer/Campaign"]
margin_left = -15.7717
margin_top = 39.529
margin_right = 24.2283
margin_bottom = 79.529
__meta__ = {
"_edit_use_anchors_": false
}

[node name="world" type="OptionButton" parent="TabContainer/Campaign/menu"]
anchor_top = 0.0277008
anchor_bottom = 0.0277008
margin_left = 76.2244
margin_top = 34.5547
margin_right = 180.224
margin_bottom = 81.5543
__meta__ = {
"_edit_use_anchors_": false
}

[node name="section" type="OptionButton" parent="TabContainer/Campaign/menu"]
margin_left = 247.881
margin_top = 39.2715
margin_right = 372.881
margin_bottom = 82.2715
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentBtn" type="Button" parent="TabContainer/Campaign/menu"]
margin_left = 484.21
margin_top = 160.665
margin_right = 646.21
margin_bottom = 261.665
text = "DISPLAY STUDENT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvgSectionBtn" type="Button" parent="TabContainer/Campaign/menu"]
margin_left = 313.573
margin_top = 189.474
margin_right = 462.573
margin_bottom = 260.474
text = "Avg Sect Score"

[node name="AvgWorldBtn" type="Button" parent="TabContainer/Campaign/menu"]
margin_left = 175.069
margin_top = 193.906
margin_right = 291.069
margin_bottom = 271.906
text = "Avg World Score"

[node name="Title" type="Label" parent="TabContainer/Campaign/menu"]
margin_left = 138.546
margin_top = 303.01
margin_right = 204.546
margin_bottom = 346.01
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chart" type="ReferenceRect" parent="."]
margin_left = 17.4576
margin_top = 509.202
margin_right = 640.458
margin_bottom = 898.202
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_icon": ExtResource( 1 )
}
label_font = SubResource( 2 )
grid_color = Color( 0.0666667, 0.0901961, 0.109804, 0.694118 )
chart_background_opacity = 0.15

[node name="groupType" type="Control" parent="."]
margin_left = 500.48
margin_top = 372.1
margin_right = 500.48
margin_bottom = 372.1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="line" type="CheckBox" parent="groupType"]
margin_right = 132.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
pressed = true
action_mode = 0
group = ExtResource( 4 )
text = "Line chart"

[node name="pie" type="CheckBox" parent="groupType"]
margin_top = 23.0
margin_right = 132.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
action_mode = 0
group = ExtResource( 4 )
text = "Pie chart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="student" type="OptionButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 439.0
margin_top = 110.0
margin_right = 539.0
margin_bottom = 122.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TabContainer/Assignment/AssignmentBtn" to="." method="_on_AssignmentBtn_pressed"]
[connection signal="pressed" from="TabContainer/Assignment/StudentAssignmentBtn" to="." method="_on_StudentAssignmentBtn_pressed"]
[connection signal="item_selected" from="TabContainer/Campaign/menu/world" to="." method="_on_world_item_selected"]
[connection signal="pressed" from="TabContainer/Campaign/menu/StudentBtn" to="." method="_on_StudentBtn_pressed"]
[connection signal="pressed" from="TabContainer/Campaign/menu/AvgSectionBtn" to="." method="_on_AvgSectionBtn_pressed"]
[connection signal="pressed" from="TabContainer/Campaign/menu/AvgWorldBtn" to="." method="_on_AvgWorldBtn_pressed"]
[connection signal="pressed" from="groupType/line" to="chart" method="set_chart_type" binds= [ 0 ]]
[connection signal="pressed" from="groupType/line" to="." method="reset" flags=3]
[connection signal="pressed" from="groupType/pie" to="chart" method="set_chart_type" binds= [ 1 ]]
[connection signal="pressed" from="groupType/pie" to="." method="pie_chart" flags=3]
